# fastsam_ros

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  ros_entrypoint.sh
fastsam_ros/: CMakeLists.txt  package.xml  setup.py
fastsam_ros/launch/: segment.launch
fastsam_ros/nodes/: segment_anything.py
fastsam_ros/src/fastsam_ros/: wrapper.py
