<?xml version="1.0"?>
<package format="2">
  <name>fastsam_ros</name>
  <version>0.0.0</version>
  <description>FastSAM ROS</description>

  <maintainer email="plusk@mit.edu">Parker Lusk</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>vision_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
